<?xml version="1.0" encoding="utf-8"?>


<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings">

    <CheckBoxPreference
        android:layout="@layout/preference_custom"
        android:key="alarm_in_silent_mode"
        android:summary="@string/alarm_in_silent_mode_summary"
        android:title="@string/alarm_in_silent_mode_title" />

    <VolumePreference
        android:layout="@layout/preference_custom"
        android:dialogTitle="@string/alarm_volume_title"
        android:persistent="false"
        android:streamType="alarm"
        android:summary="@string/alarm_volume_summary"
        android:title="@string/alarm_volume_title" />

    <ListPreference
        android:layout="@layout/preference_custom"
        android:defaultValue="10"
        android:dialogTitle="@string/snooze_duration_title"
        android:entries="@array/snooze_duration_entries"
        android:entryValues="@array/snooze_duration_values"
        android:key="snooze_duration"
        android:title="@string/snooze_duration_title" />

    <ListPreference
        android:layout="@layout/preference_custom"
        android:defaultValue="@string/voice_default"
        android:dialogTitle="@string/voice_select_title"
        android:entries="@array/voice_select"
        android:entryValues="@array/voice_store"
        android:key="voice_select"
        android:title="@string/voice_select_title" />

</PreferenceScreen>
