<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipeRefresh"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">
    <LinearLayout
        android:layout_weight="7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/styleStarDisplay"
                android:text="@string/starName"
                />
            <android.support.v7.widget.AppCompatSpinner
                android:background="@drawable/background_spinner"
                android:layout_marginEnd="16dp"
                android:prompt="@string/select_star"
                android:spinnerMode="dialog"
                android:entries="@array/star_names"
                android:id="@+id/spinner_star_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/styleStarDisplay"
                android:text="@string/tv_match_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginStart="16dp"
                style="@style/styleStarDisplay"
                android:id="@+id/tv_match_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/styleStarDisplay"
                android:text="@string/datetime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginStart="16dp"
                style="@style/styleStarDisplay"
                android:id="@+id/tv_date_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/styleStarDisplay"
                android:text="@string/luckyColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginStart="16dp"
                style="@style/styleStarDisplay"
                android:id="@+id/tv_lucky_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/styleStarDisplay"
                android:text="@string/summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginStart="16dp"
                style="@style/styleStarDisplay"
                android:id="@+id/tv_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <fragment
                android:name="com.niuniumei.intelligentalarmclock.Pager"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/fragment_progress" />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_marginBottom="16dp"
            android:id="@+id/adLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal">
        </LinearLayout>



    </LinearLayout>


</android.support.v4.widget.SwipeRefreshLayout>
